diseño terminado nofake

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1126,7 +1126,7 @@ html,body{
     padding: 172px 0 0;
 }
 .single-special-offer h2{
-    color: #74eaff;
+    color: #1ABC9C; 
     font-size: 30px;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
