--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -169,7 +169,7 @@
 
 	.single-package-item {max-width: 350px;margin: 0 auto;margin-bottom: 30px;}
 
-	.single-special-shape-txt {left: 30px;}
+	.single-special-shape-txt {padding:50px;left: 30px;margin:0px}
 
 }/*max-width:480px*/
 
