--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1090,6 +1090,8 @@ html,body{
 }
 
 .single-special-shape-txt {
+    margin-left: 10px;
+    margin-top:110px;
     position: absolute;
     top: 60px;
     left:62px;
@@ -1103,7 +1105,7 @@ html,body{
 }
 .single-special-shape-txt h4{
     text-transform: uppercase;
-    margin: 174px 0;
+    margin: 100px 0;
     line-height: 1.3;
 }
 .single-special-shape-txt h4 span{
